# oauth-systems-lab

./: .gitignore  pyproject.toml
notebooks/: 00_oauth_invariants.ipynb  01_oauth_flow_simulation.ipynb  02_oauth_minimal_flow_simulation.ipynb  03_cimd_minimal_flow.ipynb  04_cimd_caching_and_revocation.ipynb  05_resource_server_token_validation.ipynb  06_scope_design_and_least_privilege.ipynb  07_agent_access_and_rag_acl.ipynb
src/app/: main.py
src/app/asrv/: pkce.py  routes.py  storage.py
src/app/cimd/: cache.py  fetcher.py  types.py
src/app/rsrv/: auth.py  routes.py
